# OneiroEngine

./: .gitignore  .gitmodules  CNAME  README.md  appveyor.yml  index.md
.github/: FUNDING.yml
.github/workflows/: cmake.yml  pr.yml
Docs/: CONTRIBUTING.md  ISSUES.md
Engine/: CMakeLists.txt
Engine/API/: CMakeLists.txt
Engine/API/Include/API/: Application.hpp  Base.hpp  Input.hpp
Engine/API/Source/: Application.cpp  Input.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/Include/Core/: Core.hpp  Window.hpp
Engine/Core/Include/Oneiro/Core/: Core.hpp  Input.hpp  Logger.hpp  Oneiro.hpp  Root.hpp  Window.hpp
Engine/Core/Source/: Core.cpp  Window.cpp
Engine/Debugger/: CMakeLists.txt
Engine/Debugger/Include/Debugger/: Debugger.hpp  Logger.hpp
Engine/Debugger/Source/: Debugger.cpp  Logger.cpp
Engine/Editor/: CMakeLists.txt
Engine/Editor/Source/: editor.cpp
Engine/Include/Oneiro/Animation/: Animation.hpp  DissolveAnimation.hpp
Engine/Include/Oneiro/Core/: Config.hpp  Core.hpp  Event.hpp  Input.hpp  Logger.hpp  Oneiro.hpp  Random.hpp  ResourceManager.hpp  Root.hpp  Timer.hpp  Window.hpp
Engine/Include/Oneiro/Lua/: LuaAudioSource.hpp  LuaFile.hpp  LuaSprite2D.hpp
Engine/Include/Oneiro/Renderer/: Renderer.hpp
Engine/Include/Oneiro/Renderer/Gui/: GuiLayer.hpp
Engine/Include/Oneiro/Renderer/OpenGL/: Base.hpp  Buffer.hpp  ErrorHandler.hpp  Framebuffer.hpp  IndexBuffer.hpp  Mesh.hpp  Model.hpp  Renderbuffer.hpp  Shader.hpp  Sprite2D.hpp  Text.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
Engine/Include/Oneiro/Renderer/Vulkan/: Base.hpp  Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  DepthBuffer.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Framebuffer.hpp  ImageViews.hpp  IndexBuffer.hpp  Intance.hpp  LogicalDevice.hpp  MSAA.hpp  PhysicalDevice.hpp  Pipeline.hpp  RenderPass.hpp  Shader.hpp  Sprite2D.hpp  SwapChain.hpp  Texture.hpp  UniformBuffer.hpp  ValidationLayers.hpp  VertexBuffer.hpp  WindowSurface.hpp
Engine/Include/Oneiro/Runtime/: Application.hpp  Engine.hpp  EntryPoint.hpp
Engine/Include/Oneiro/Scene/: Components.hpp  Entity.hpp  Scene.hpp  SceneManager.hpp
Engine/Include/Oneiro/VIsualNovel/: VNApplication.hpp  VNCore.hpp
Engine/Include/Oneiro/VisualNovel/: VNCore.hpp
Engine/Include/Oneiro/World/: Components.hpp  Entity.hpp  World.hpp  WorldManager.hpp
Engine/Renderer/: CMakeLists.txt
Engine/Renderer/Include/Oneiro/Renderer/: Renderer.hpp
Engine/Renderer/Include/Oneiro/Renderer/OpenGL/: IndexBuffer.hpp  Shader.hpp  Sprite2D.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
Engine/Renderer/Include/Renderer/: Renderer.hpp
Engine/Renderer/Include/Renderer/OpenGL/: IndexBuffer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
Engine/Renderer/Source/: Renderer.cpp
Engine/Renderer/Source/OpenGL/: IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  gl.cpp
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Include/Oneiro/Runtime/: Application.hpp  Engine.hpp  EntryPoint.hpp
Engine/Runtime/Include/Runtime/: Application.hpp  Engine.hpp  EntryPoint.hpp  Runtime.hpp
Engine/Runtime/Source/: Application.cpp  Engine.cpp  EntryPoint.cpp  Runtime.cpp
Engine/Shaders/: frag.spv  shader.frag  shader.vert  vert.spv
Engine/Shaders/2D/Compiled/: sprite2d.frag.spv  sprite2d.vert.spv
Engine/Shaders/2D/Source/: sprite2d.frag  sprite2d.vert
Engine/Shaders/3D/Compiled/: shader.vert.spv
Engine/Shaders/3D/Source/: shader.frag  shader.vert
Engine/Source/Animation/: Animation.cpp  DissolveAnimation.cpp
Engine/Source/Core/: Config.cpp  Core.cpp  Event.cpp  Input.cpp  Logger.cpp  Random.cpp  ResourceManager.cpp  Root.cpp  Timer.cpp  Window.cpp
Engine/Source/Lua/: LuaFile.cpp
Engine/Source/Renderer/: Renderer.cpp
Engine/Source/Renderer/Gui/: GuiLayer.cpp
Engine/Source/Renderer/OpenGL/: ErrorHandler.cpp  Framebuffer.cpp  IndexBuffer.cpp  Mesh.cpp  Model.cpp  Renderbuffer.cpp  Shader.cpp  Sprite2D.cpp  Text.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/Source/Renderer/Vulkan/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DepthBuffer.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Framebuffer.cpp  ImageViews.cpp  IndexBuffer.cpp  Instance.cpp  LogicalDevice.cpp  MSAA.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderPass.cpp  Shader.cpp  SwapChain.cpp  Texture.cpp  UniformBuffer.cpp  ValidationLayers.cpp  VertexBuffer.cpp  WindowSurface.cpp
Engine/Source/Runtime/: Application.cpp  Engine.cpp  EntryPoint.cpp
Engine/Source/Scene/: Entity.cpp  Scene.cpp  SceneManager.cpp
Engine/Source/VisualNovel/: VNCore.cpp
Engine/Source/World/: Components.cpp  Entity.cpp  World.cpp  WorldManager.cpp
Engine/VisualNovel/: CMakeLists.txt
Engine/VisualNovel/Include/Oneiro/VisualNovel/: Background.hpp  ImageBase.hpp  Sprite.hpp
Engine/VisualNovel/Source/: Background.cpp  Sprite.cpp
SandBox/: CMakeLists.txt
SandBox/Assets/: Credits.txt
SandBox/Assets/Models/: cube.fbx
SandBox/Assets/Scripts/: test.lua
SandBox/Scenes/: main.oescene
SandBox/Shaders/: shader.glsl
SandBox/Source/: Main.cpp  SandBoxApp.cpp  SandBoxApp.hpp  main.cpp
