cmake_minimum_required(VERSION 3.21)
project(SandBox)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BINARY_DIR "${PROJECT_SOURCE_DIR}/../bin/${CMAKE_SYSTEM_NAME}/${CMAKE_PROJECT_NAME}/${CMAKE_BUILD_TYPE}-${CMAKE_SYSTEM_PROCESSOR}")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(BINARY_DIRECTORY ${CMAKE_BINARY_DIR})

file(GLOB TEXTURE_FILES "Textures/*.*")
file(GLOB SCENES_FILES "Scenes/*.oescene")
file(COPY ${TEXTURE_FILES} DESTINATION ${BINARY_DIRECTORY}/Textures/)
file(COPY ${SCENES_FILES} DESTINATION ${BINARY_DIRECTORY}/Scenes/)

if (CMAKE_GENERATOR MATCHES "Ninja")
    set(CMAKE_CL_SHOWINCLUDES_PREFIX "Note: including file:")
endif ()

foreach (OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR})
endforeach (OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

add_executable(${CMAKE_PROJECT_NAME} Source/Main.cpp)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../Engine/ Oneiro)